syntax = "proto3";
package KurrentDB.LogV3;

import "Protos/proto_guid.proto";

message EventSystemMetadata {
	ProtoGuid event_id = 1;
}
